[metadata]
name = fdsocket
version = 1.0.0
summary = Tool for determining socket family of a file descriptor.
download_url = UNKNOWN
home_page = https://github.com/LEW21/fdsocket
author = Janusz Lewandowski
author_email = lew21@xtreeme.org
classifier = License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[extension: fdsocket]
language = c
sources = fdsocket.c
