[metadata]
name = fdsocket
version = 1.0
summary = Tool for determining socket family of a file descriptor.
home_page = https://github.com/LEW21/fdsocket
download_url = http://pypi.python.org/pypi/fdsocket
author = Janusz Lewandowski
author_email = lew21@enves.pl
description-file = README.rst
classifier = License :: OSI Approved :: MIT License
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Operating System :: POSIX
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.3

[extension: fdsocket]
language = c
sources = fdsocket.c
